--- a/src/css/media.css
+++ b/src/css/media.css
@@ -20,6 +20,40 @@
     .slidePromo__container {
         right: 28%;
     }
+    #insta-slider  .slick-slide {
+        width: 323px !important;
+    }
+    .instagram__item {
+        width:315px!important;
+    }
+    .instagram__feed {
+        max-height: 315px;
+    }
+    #insta-slider .slick-slide.slick-active{
+        margin-left: 10px;
+        margin-right: -8px;
+    }
+    .ambassadors__item {
+        width: 422px !important;
+    }
+    .ambassador__main {
+        padding-top: 16px;
+    }
+    .ambassador__content {
+        margin-top: -18px;
+    }
+    .ambassador__picture {
+        margin-top: -18px;
+    }
+    #ambassador-slider .slick-slide {
+        width: 430px !important;
+    }
+    .articles__item {
+        width: 422px !important;
+    }
+    #articles-slider .slick-slide {
+        width:430px !important;
+    }
     .map__list {
         left: calc(50% - 1290px / 2);
     }
