--- a/src/css/media.css
+++ b/src/css/media.css
@@ -116,7 +116,7 @@
     }
 
     .slidePromo__descriptionWrapper {
-        width: 310px;
+        width: 323px;
     }
 
     .slidePromo__linkBlock {
@@ -141,10 +141,6 @@
 
     .about__block {
         padding: 70px 80px 70px 50px;
-    }
-
-    .slick-slide {
-        padding-right: 8px;
     }
 
     #insta-slider .slick-slide {
@@ -241,6 +237,12 @@
     .navigation__item:last-child .navigation__link {
         padding-right: 45px;
     }
+    .footerCounter__container {
+        justify-content: space-between;
+    }
+    .footerCounter__item {
+        margin-right: 16px;
+    }
 }
 
 @media screen and (max-width: 1023px) {
@@ -252,8 +254,22 @@
         padding: 60px 0;
     }
 
-    .navigation__text, .navigation__item:not(.navigation__item--mobileMenu), .slideFooter__more, .instagram__logo {
+    .navigation__text, .header .navigation__item, .slide__footer, .instagram__logo, .footer .navigation__item--red {
         display: none;
+    }
+
+    .navigation__item.navigation__item--mobileMenu, .navigation__item.navigation__item--menu, .footer .navigation__item--footer {
+        display: flex;
+    }
+    .footer .navigation__item:nth-child(2)  .navigation__link {
+        padding-left: 0;
+    }
+    .navigation__item--footer {
+        height: 60px;
+        justify-content: center;
+    }
+    .navigation__item--menu .navigation__link {
+        padding-left: 18px;
     }
 
     .navigation__item--menu span {
@@ -289,15 +305,20 @@
     }
 
     .navigation {
-        width: 55%;
+        width: 45%;
     }
 
     .feedback {
-        width: 45%;
+        width: 55%;
     }
 
     .slider {
         flex-wrap: wrap;
+        height: auto;
+    }
+
+    .slider__block--gallery {
+        height: 426px;
     }
 
     .slide {
@@ -305,8 +326,13 @@
         min-height: auto;
     }
 
+    .slidePromo__container {
+        left: auto;
+        right: 30px;
+    }
+
     .slide__personImage {
-        display: none;
+        position: static;
     }
 
     .slide__block, .slideTitle {
@@ -317,6 +343,10 @@
         font-size: 70px;
     }
 
+    .slidePromo__descriptionWrapper {
+        width: 342px;
+    }
+
     .slide__description {
         padding-top: 60px;
         margin: 0 30px;
@@ -324,6 +354,7 @@
     }
 
     .slider__block {
+        overflow: hidden;
         width: 100%;
     }
 
@@ -335,8 +366,12 @@
         height: 454px;
     }
 
-    .slidePromo__container {
-        left: 50%;
+    .slider .slider__pagination {
+        right: 30px;
+    }
+
+    #main-slider-next {
+        margin-right: 0;
     }
 
     .slide__person {
@@ -350,15 +385,39 @@
 
     .about__block {
         width: 100%;
-        padding: 60px 44px;
+        padding: 60px 30px;
     }
 
     .about__block--photo {
         height: 480px;
     }
 
-    .ambassadors__item:nth-child(even) {
-        margin-right: 0;
+    #ambassador-slider .slick-slide, #articles-slider .slick-slide{
+        width: 354px !important;
+    }
+
+    .ambassadors__container-slider {
+        max-height: 546px;
+    }
+
+    .ambassador__content {
+        margin-bottom: -18px;
+    }
+
+    .ambassadors__item {
+        height: 546px;
+    }
+
+    .ambassadors__item, .articles__item {
+        width: 349px !important;
+    }
+
+    #ambassador-slider .slick-slide.slick-active {
+        margin-right: -5px;
+    }
+
+    .orders.innerWrapper {
+        padding-bottom: 70px;
     }
 
     .orders__title {
@@ -385,16 +444,184 @@
     .orders__paginationWrapper {
         display: flex;
         justify-content: center;
-        padding: 31px 0 10px 0;
+        padding: 31px 0 0 0;
     }
 
     .orders__paginationWrapper .paginationBlock__container button, .orders__paginationWrapper .paginationBlock__item {
         color: #FBF8F6;
     }
+
+    .map__list {
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+    .map {
+        height: 654px;
+    }
+    .mapList__listBlock {
+        display: none;
+    }
+    .mapList__selectBlock {
+        flex-direction: row;
+    }
+    .mapList__selectBlock .selectBox {
+        width: 50%;
+        margin-bottom:0;
+    }
+    .mapList__select:first-child, .selectBox__pseudoCurrent  {
+        margin-bottom: 0;
+    }
+    .mapList__titleBlock {
+        padding-bottom: 25px;
+    }
+    .articles__item {
+        height: 508px;
+    }
+    #articles-slider.articles__container {
+        max-height: 508px;
+    }
+    #articles-slider .slick-slide.slick-active {
+        margin-left: 10px;
+        margin-right: -5px;
+    }
+    .seo.innerWrapper {
+        padding-bottom: 70px;
+    }
+
 }
 
 @media screen and (max-width: 767px) {
+    .wrapper {
+        margin: 0 20px;
+    }
 
+    .innerWrapper {
+        padding: 50px 0;
+    }
+    .toolbar__counter, .feedback__item:first-child, .sliderPromo__triangle, .slidePromo__descriptionWrapper {
+        display: none;
+    }
+    .toolbar__helpers {
+        width: 100%;
+    }
+    .feedback {
+        width: auto;
+    }
+    .menu .feedback__item {
+        width: 100%;
+    }
+    .footerCounter__container {
+        flex-wrap: wrap;
+    }
+    .slideTitle {
+        font-size: 50px;
+    }
+    .slide__description {
+        padding-top: 50px;
+        margin: 0 20px;
+        width: 100%;
+    }
+    .slidePromo__linkBlock {
+        width: auto;
+    }
+    #main-slider .slide {
+        display: flex;
+        justify-content: center;
+    }
+    .slidePromo__container {
+        top: 269px;
+        left: 0;
+        right: 0;
+        margin: auto;
+        max-width: 210px;
+        z-index: 1000;
+    }
+    .slider .slider__pagination {
+        display: flex;
+        justify-content: center;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+    .about__linkBlock {
+        left: 0;
+        right: 0;
+        margin: auto;
+        max-width: 212px;
+        bottom: 40px;
+    }
+    #insta-slider .slick-slide {
+        width: 220px!important;
+    }
+    .instagram__item {
+        width: 215px!important;
+    }
+    .instagram__feed {
+        max-height: 215px;
+    }
+    .instagram__footer {
+        align-items: flex-start;
+        flex-direction: column-reverse;
+    }
+    .instagram__paginationWrapper {
+        margin-bottom: 30px;
+    }
+    .ambassadors__filter {
+        flex-direction: column;
+    }
+    .footer__navContainer {
+        flex-wrap: wrap;
+    }
+    .footer__navContainer  .menu__block {
+        height: auto;
+    }
+   .footer  .navigation {
+        padding-top: 20px;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .footer__navContainer .navigation__item {
+        padding-bottom: 20px;
+    }
+    .navigation__item:last-child .navigation__link {
+        padding: 0;
+    }
+    .navigation__item:nth-child(5) .navigation__link  {
+        padding-right: 30px;
+    }
+    .footer .toolbar__helper {
+        margin-left: 0;
+        margin-bottom: 20px;
+    }
+    .footerCounter {
+        padding-top: 35px;
+        padding-bottom: 31px;
+    }
+    .footerCounter__item {
+        width: 50%;
+        margin-right: 0;
+        margin-bottom: 14px;
+    }
+    .social__item:first-child {
+        margin-left: 0;
+    }
+    .orders.innerWrapper {
+        padding-top: 50px;
+        padding-bottom: 60px;
+    }
+    .orders__title {
+        padding: 0;
+    }
+    .orders__item {
+        height: 450px;
+    }
+    .orderCTA {
+        flex-wrap: wrap;
+    }
+    .orderCTA__item {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 479px) {
